--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,26 @@ body{
 
     background-color:  rgba(0, 0, 0, 0.8);
 }
+#container{
+    background-color: white;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+#map {
+    height: 60%;
+    width: auto;
+    display: none;
+}
 
 * {
     box-sizing: border-box;
+}
+#dep-Arr{
+    display: flex;
+    flex-direction: row;
+    width: 50%;
 }
 
 #table{
@@ -24,8 +41,10 @@ text-align: center;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
+    width: 100%;
 }
+
+
 
 #result{
     background-color: white;
@@ -35,6 +54,8 @@ text-align: center;
     width: 70%;
     height: 700px;
 }
+
+
 #form{
     margin-top: -100px;
     background-color:  rgba(0, 0, 0, 0.5);
@@ -55,6 +76,15 @@ body {
     position: relative;
     display: flex;
 }
+#loader-container{
+    display: flex;
+}
+#loader{
+    margin-top: 30px;
+}
+#loader,#db-fail,#db-success {
+    display: none;
+}
 
 input {
     border: 1px solid transparent;
@@ -69,11 +99,11 @@ input {
     border-radius: 5px;
 }
 #time,#date{
-    width: 10%;
+    width: 30%;
 }
 input[type=text] {
     background-color:white;
-    width: 30%;
+    width: 50%;
 }
 
 input[type=submit] {
@@ -84,6 +114,7 @@ input[type=submit] {
 
 .autocomplete-items {
     position: absolute;
+
     border: 1px solid #d4d4d4;
     border-bottom: none;
     border-top: none;
@@ -92,22 +123,68 @@ input[type=submit] {
     top: 100%;
     left: 0;
     right: 0;
+    margin-top: -15px;
+    margin-left: 25px;
+    width: 22%;
 }
 
-.autocomplete-items div {
-    padding: 10px;
-    cursor: pointer;
-    background-color: #fff;
-    border-bottom: 1px solid #d4d4d4;
+#db-msg{
+
+    background-color: white;
 }
 
-/*when hovering an item:*/
-.autocomplete-items div:hover {
-    background-color: #e9e9e9;
+#db-success{
+    padding: 50px;
 }
 
-/*when navigating through the items using the arrow keys:*/
-.autocomplete-active {
-    background-color: DodgerBlue !important;
-    color: #ffffff;
+#db-fail{
+   padding-top: 50px;
+}
+
+@media only screen and (max-width: 1500px) {
+    body {
+        background-color: white;
+    }
+
+    .header{
+        display: inline;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+
+    #container{
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    body {
+        background-color: white;
+    }
+
+    .autocomplete{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
+    #dep-Arr{
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+    }
+    #date-time{
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+    }
+    #time,#date{
+        width: 50%;
+    }
+
+    input[type=text] {
+        width: 70%;
+        margin-top: 10px;
+        height: 30px;
+    }
 }
