--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html LANG="fr">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -16,49 +16,76 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.js"></script>
     <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-    <script src="/data.js"></script>
-    <script src="/autocomplete.js"></script>
 </head>
 <body>
 
-<div class="header">
-    <img src="/sncf.jpeg" alt="sncf" class="responsive">
+<div id="container">
+    <div class="header">
+        <img src="/sncf.jpeg" alt="sncf" class="responsive">
 
-    <div class="autocomplete" id="form">
-        <input id="inputDep" class="myInput" type="text" name="departure" placeholder="Departure">
-        <input id="inputArr" class="myInput" type="text" name="arrival" placeholder="Arrival">
-        <input id="date" class="date" type="text" name="Date" placeholder="Date">
-        <input id="time" class="timepicke" type="text" name="Time" placeholder="Time">
-       <img src="/search.png" alt="search" id="search">
+        <div class="autocomplete" id="form">
+            <div id="dep-Arr">
+                <input id="inputDep" class="myInput" type="text" name="departure" placeholder="Departure">
+                <input id="inputArr" class="myInput" type="text" name="arrival" placeholder="Arrival">
+            </div>
+            <div id="date-time">
+                <input id="date" class="date" type="text" name="Date" placeholder="Date">
+                <input id="time" class="timepicke" type="text" name="Time" placeholder="Time">
+            </div>
+
+            <img src="/search.png" alt="search" id="search">
+        </div>
+    </div>
+    <div id="result">
+        <table id="table">
+            <thead>
+            <tr>
+                <th>||Heure de Départ||</th>
+                <th>||Heure D'arrivée||</th>
+                <th>||Durée||</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        <div id="message">
+            <h1> No solution found for this journey</h1>
+        </div>
+        <div id="map">
+        </div>
+        <div id="loader" class="text-center">
+            <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div id="loader-text">
+                <h4 id="loader-titre" class="loader">Création de la base de données en cours. Veuillez patienter</h4>
+                <h6 class="loader">Cela peut prendre plusieurs minutes</h6>
+            </div>
+        </div>
+        <div id="db-msg" class="text-center">
+            <div id="db-success" class="alert alert-success" role="alert">
+                <b>Database successfully created !!  </b>  <br>
+            </div>
+            <div id="db-fail" class="alert alert-danger" role="alert">
+                <b> Database creation failed !! </b> <br>
+            </div>
+        </div>
+
+
     </div>
 </div>
-<div id="result">
-    <table id="table">
-        <thead>
-        <tr>
-            <th>||Heure de Départ||</th>
-            <th>||Heure D'arrivée||</th>
-            <th>||Durée||</th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-    <div id="message">
-        <h1> No solution found for this journey</h1>
-    </div>
-    <div id="map">
-    </div>
-    <div id="loader">
-    </div>
 
-</div>
 
 
 <!--Make sure the form has the autocomplete function switched off:-->
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
-
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfsk9gTeHe3ecdSYI1hD1qurDFa5TbQnY&callback=initMap">
+</script>
+<script src="/data.js"></script>
+<script src="/autocomplete.js"></script>
+<script src="/maps.js"></script>
 </body>
 </html>
 
