added section information for all journeys

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,17 +37,8 @@
         </div>
     </div>
     <div id="result">
-        <table id="table">
-            <thead>
-            <tr>
-                <th>||Heure de Départ||</th>
-                <th>||Heure D'arrivée||</th>
-                <th>||Durée||</th>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+        <div id="table">
+        </div>
         <div id="message">
             <h1> No solution found for this journey</h1>
         </div>
