--- a/public/style.css
+++ b/public/style.css
@@ -188,3 +188,25 @@ input[type=submit] {
         height: 30px;
     }
 }
+
+.content {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+ }
+ 
+ .collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
